<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="event_name_hint">Event Name</string>
    <string name="add_event">Add Event</string>
    <string name="event_location_hint">Event Location</string>
    <string name="event_date_hint">Event Date</string>
    <string name="event_type_hint">Event Type</string>
    <string name="event_description_hint">Event Description</string>
    <string name="material_button_login">Login</string>
    <string name="material_button_guest">Guest</string>
    <string name="profile_image_description">profile_image</string>
    <string name="event_photo_url_hint">Event Photo URL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_timeline_text">Timeline</string>
    <string name="fragment_favorites_text">Favorites</string>
    <string name="fragment_calendar_text">Near You</string>
    <string name="fragment_maps_text">Maps</string>
    <string name="add_event_text">Add event</string>
    <string name="content_description_card">This is a description</string>
    <string name="event_subtitle">Date: %1$s\nLocation: %2$s\nType: %3$s</string>
    <string name="event_distance">Distance to you: %1$s</string>
    <string name="material_button_favorite_description">Favorite</string>
    <string name="material_button_share_description">Share</string>
    <string name="button_info_text">Info</string>
    <string name="button_edit_text">Edit</string>
    <string name="fragment_calendar_name">Calendar Fragment</string>
    <string name="fragment_favorites_name">Favorites Fragment</string>
    <string name="fragment_maps_name">Maps Fragment</string>
    <string name="favorite_event_image">Image of the favorite event</string>
    <string name="button_edit_event">Edit Event</string>
    <string name="button_geocode">Locate address on map</string>
    <string name="dropdown_event_type">Select the type of event from the dropdown menu you would prefer</string>
    <string name="event_image_preview">Event Image Preview</string>
    <string name="event_take_photo">Take a photo</string>
    <string name="event_image_gallery">Gallery</string>
    <string name="event_photo_text">Event Photo:</string>
    <string name="event_image_text">Event Image:</string>
    <string name="event_image_change_text">Tap to change image</string>
    <string name="event_delete_button_text">Delete</string>
</resources>