<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.EditEventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Event Name section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_top_section"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/event_name_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/event_name_hint"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Event location section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_event_name"
            app:startIconDrawable="@drawable/event_location_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/event_location_hint"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Event Photo section with actual image display -->
        <TextView
            android:id="@+id/photo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_photo_text"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_event_location"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/event_image_card"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_huge"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_standard"
            app:cardCornerRadius="@dimen/margin_standard"
            app:cardElevation="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo_label">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/event_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/event_image_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tap_to_change_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_image_change_text"
                    android:textColor="@android:color/white"
                    android:background="#80000000"
                    android:padding="@dimen/margin_standard"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!-- Hidden field to store the image URL -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_photo_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_image_card">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_event_photo_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/event_photo_url_hint"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Event Date section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_image_card"
            app:startIconDrawable="@drawable/event_date_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/event_date_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Event Type section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_event_date"
            app:startIconDrawable="@drawable/event_type_icon">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_view_event_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/event_type_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Event Description section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_event_type"
            app:startIconDrawable="@drawable/event_description_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_description_hint"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/text_field_event_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/delete_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_standard"
                android:text="@string/event_delete_button_text"
                android:backgroundTint="@android:color/holo_red_light"/>

            <Button
                android:id="@+id/update_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:text="@string/button_edit_event"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>